# diffusion-planning-rl

./: .gitignore  README.md  dataset_test.ipynb  dprl.py  environment.yml  pyproject.toml  test.ipynb  win_env.yml
analysis/: action_accuracy.ipynb  diffusion_analysis.ipynb  latent_analysis.ipynb
dprl/: train.py  train_diffusion.py
dprl/algo/: autoencoder.py  categorical.py  seq2seq.py  utils.py
dprl/algo/models/: __init__.py  action.py  decoder.py  diffusion.py  discriminator.py  encoder.py  net.py  transformer.py
dprl/config/: config.yaml
dprl/config/algo/: autoencoder_M.yaml  autoencoder_M_no_codebook.yaml  autoencoder_S.yaml  autoencoder_S_no_codebook.yaml  autoencoder_patchgan_S.yaml  diffusion_M_categorical.yaml  diffusion_S.yaml  diffusion_S_categorical.yaml
dprl/config/metrics/: defaults.yaml
dprl/data/: __init__.py  datasets.py  utils.py
dprl/metrics/: __init__.py  logutils.py
